# purpbot-mod-ai

./: .gitignore  README.md  format.py  helper.py  main.py  pyproject.toml  readme.md  requirements.txt  test.py  train.py  train_model.py  valid.data
src/: format.py  train.py
