[project]
name = "purpbot-mod-ai"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "te", email = "thrzl@icloud.com" }
]
dependencies = [
    "fasttext @ git+https://github.com/facebookresearch/fastText",
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/purpbot_mod_ai"]
