[project]
name = "purpbot-mod-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "click>=8.2.1",
    "fasttext @ git+https://github.com/facebookresearch/fastText",
]

[tool.uv.sources]
fasttext = { git = "https://github.com/facebookresearch/fastText" }
